<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proximity</string>
    <string name="action_settings">Settings</string>
    <string name="title">Proximity</string>
    <string name="select_device">Select Device</string>
    <string name="clear_log">Clear Log</string>
    <string name="start_stop">Start / Stop</string>
    <string name="calibrate">Calibrate</string>
    <string name="view_log">View Logs</string>
    <string name="settings">Settings</string>
    <string name="info">Green : Sensor is in range \n\ Red: Sensor is out of range</string>
    <string name="status_sensor">Status of the sensor</string>
    <string name="name">Name :   </string>
    <string name="enable_log">Enable Logging : </string>
    <string name="enable_alarm">Enable Alarm : </string>
    <string name="save">Save</string>
    <string name="battery">Battery : </string>
    <string name="status">Status : </string>
    <string name="startapp">Start App</string>
    <string name="logging">Logging</string>
    <string name="hundred">100</string>

</resources>